--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -24,7 +24,9 @@
     "experimentalDecorators": true,
     "skipLibCheck": true,
     "rootDir": ".",
-    "baseUrl": "src",
+    // "baseUrl": "src",
+
+    // TODO
     // "paths": {
     //   "@/entities/*": ["entities/*"],
     //   "@/resolvers/*": ["resolvers/*"],
@@ -32,37 +34,5 @@
     // },
   },
   "exclude": ["node_modules"],
-  "include": ["./src/**/*.tsx", "./src/**/*.ts", "./*.ts"]
+  "include": ["./**/*.tsx", "./**/*.ts", "./*.ts"]
 }
-
-// {
-//   "compilerOptions": {
-//     "target": "es5",
-//     "lib": ["dom", "dom.iterable", "esnext"],
-//     "baseUrl": "src",
-//     "paths": {
-//       "@/components/*": ["components/*"],
-//       "@/utils/*": ["utils/*"],
-//       "@/styles/*": ["styles/*"]
-//     },
-//     "allowJs": true,
-//     "skipLibCheck": true,
-//     "strict": true,
-//     "noImplicitAny": true,
-//     "strictNullChecks": true,
-//     "strictFunctionTypes": true,
-//     "noImplicitThis": true,
-//     "noImplicitReturns": true,
-//     "noFallthroughCasesInSwitch": true,
-//     "forceConsistentCasingInFileNames": true,
-//     "noEmit": true,
-//     "esModuleInterop": true,
-//     "module": "esnext",
-//     "moduleResolution": "node",
-//     "resolveJsonModule": true,
-//     "isolatedModules": true,
-//     "jsx": "preserve"
-//   },
-//   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
-//   "exclude": ["node_modules"]
-// }
